fix:방문한부스로 수정
