# build/swagger.yaml
@@ -166,6 +166,64 @@ paths:
                   message:
                     type: string
                     example: 유저 삭제 실패
+  '/api/user/{user_id}/booth-visit':
+    get:
+      tags:
+        - User
+      summary: 사용자가 최근 한 달 내에 방문한 부스 조회
+      description: 사용자의 최근 한 달 내 방문한 부스 목록을 조회합니다.
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          schema:
+            type: integer
+          description: 방문한 부스를 조회할 사용자 ID
+      responses:
+        '200':
+          description: 사용자가 최근 한 달 내 방문한 부스 목록을 반환합니다.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    date:
+                      type: string
+                      format: date
+                      description: 사진을 찍은 날짜
+                      example: '2024-10-10'
+                    photobooth_name:
+                      type: string
+                      description: 방문한 포토부스 이름
+                      example: 하루필름 강남점
+        '404':
+          description: 최근 한 달 내에 방문한 부스가 없는 경우
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: 방문한 부스가 없습니다.
+        '500':
+          description: 서버 오류 발생 시
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: 방문한 부스 찾기 실패
   '/api/review/user/{user_id}':
     post:
       tags:
@@ -745,3 +803,184 @@ paths:
                     example: 검색어를 입력하세요.
         '500':
           description: Internal server error.
+  '/api/album/{user_id}':
+    get:
+      tags:
+        - Photo
+      summary: 사용자의 앨범 조회
+      description: '사용자가 등록한 사진을 다양한 필터(date, brand, location, hashtag)를 통해 조회합니다.'
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          schema:
+            type: integer
+          description: 사용자의 ID
+        - in: query
+          name: date
+          required: false
+          schema:
+            type: string
+            format: date
+            example: 2024-11
+          description: 조회할 사진의 연도와 월 (YYYY-MM 형식)
+        - in: query
+          name: brand
+          required: false
+          schema:
+            type: string
+            example: 하루필름
+          description: 필터링할 포토부스 브랜드명
+        - in: query
+          name: location
+          required: false
+          schema:
+            type: boolean
+            example: true
+          description: '사용자 현재 위치를 기반으로 필터링 여부 (true: 현재 위치 기반)'
+        - in: query
+          name: hashtag
+          required: false
+          schema:
+            type: string
+            example: 여행
+          description: 해시태그를 통해 필터링 (부분 일치 가능)
+      responses:
+        '200':
+          description: 필터링된 사진 목록을 반환합니다.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  photonum:
+                    type: integer
+                    description: 조회된 사진 수 (필터링 결과가 없는 경우 0)
+                  photos:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        images:
+                          type: string
+                          description: 사진 URL
+                          example: 'https://example.com/photo1.jpg'
+                        photo_like:
+                          type: boolean
+                          description: 사진 즐겨찾기 여부
+                          example: true
+        '404':
+          description: 사진이 존재하지 않거나 조회된 사진이 없는 경우
+        '500':
+          description: 서버 오류
+  '/api/photo/like/{photo_id}':
+    post:
+      tags:
+        - Photo
+      summary: 사진 즐겨찾기 토글
+      description: '특정 사진의 즐겨찾기 상태를 반대로 변경합니다. 사진이 즐겨찾기에 등록되어 있으면 해제하고, 해제되어 있으면 등록합니다.'
+      parameters:
+        - in: path
+          name: photo_id
+          required: true
+          schema:
+            type: integer
+          description: 즐겨찾기 상태를 변경할 사진의 ID
+      responses:
+        '200':
+          description: 즐겨찾기 상태가 성공적으로 업데이트되었습니다.
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: success
+                  message:
+                    type: string
+                    example: 즐겨찾기 업데이트 성공
+        '404':
+          description: 해당 ID의 사진이 존재하지 않는 경우
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: 사진을 찾을 수 없습니다.
+        '500':
+          description: 서버 오류 발생 시
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: 즐겨찾기 업데이트 실패
+  '/api/photo/{photo_id}':
+    get:
+      tags:
+        - User
+      summary: 사용자가 최근 한 달 내에 방문한 부스 조회
+      description: 사용자의 최근 한 달 내 방문한 부스 목록을 조회합니다.
+      parameters:
+        - in: path
+          name: user_id
+          required: true
+          schema:
+            type: integer
+          description: 방문한 부스를 조회할 사용자 ID
+      responses:
+        '200':
+          description: 사용자가 최근 한 달 내 방문한 부스 목록을 반환합니다.
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    date:
+                      type: string
+                      format: date
+                      description: 사진을 찍은 날짜
+                      example: '2024-10-10'
+                    photobooth_name:
+                      type: string
+                      description: 방문한 포토부스 이름
+                      example: 하루필름 강남점
+        '404':
+          description: 최근 한 달 내에 방문한 부스가 없는 경우
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: 방문한 부스가 없습니다.
+        '500':
+          description: 서버 오류 발생 시
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                    example: fail
+                  message:
+                    type: string
+                    example: 방문한 부스 찾기 실패
